--- a/ESMF/GOCART2G_GridComp/CA2G_GridComp/CA2G_GridComp_ExtData.yaml
+++ b/ESMF/GOCART2G_GridComp/CA2G_GridComp/CA2G_GridComp_ExtData.yaml
@@ -17,8 +17,7 @@ Collections:
     template: ExtData/chemistry/CEDS/v2021-04-21/sfc/OC-em-anthro_CMIP_CEDS_gn_shipping.x2304_y1441_t12.%y4.nc4
   CA2G_merra2.aer_Nv.2003-2015.2008%m2clm.nc4:
     template: ExtData/chemistry/MERRA2/v0.0.0/L72/merra2.aer_Nv.2003-2015.2008%m2clm.nc4
-  CA2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4:
-    template: ExtData/chemistry/MERRA2/v0.0.0/sfc/merra2.aer_Nx.2003-2015.2008%m2clm.nc4
+    valid_range: "2008-01-01T12:00:00/2008-12-15T12:00:00"
   CA2G_qfed2.emis_bc.006.%y4%m2%d2.nc4:
     template: ExtData/chemistry/QFED/v2.5r1-nrt/sfc/0.1/Y%y4/M%m2/qfed2.emis_bc.006.%y4%m2%d2.nc4
     valid_range: "2014-12-01T12:00/2021-11-01T12:00"
@@ -35,6 +34,9 @@ Collections:
 Samplings:
   CA2G_sample_0:
     extrapolation: clim
+    update_frequency: PT24H
+    update_offset: PT12H
+    update_reference_time: '0'
   CA2G_sample_1:
     update_frequency: PT24H
     update_offset: PT12H
@@ -186,37 +188,21 @@ Exports:
     sample: CA2G_sample_1
     variable: oc_shipping
   climBCDP001:
-    collection: CA2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
-    sample: CA2G_sample_0
-    variable: BCDP001
+    collection: /dev/null
   climBCDP002:
-    collection: CA2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
-    sample: CA2G_sample_0
-    variable: BCDP002
+    collection: /dev/null
   climBCSD001:
     collection: /dev/null
-    sample: CA2G_sample_0
-    variable: BCSD001
   climBCSD002:
     collection: /dev/null
-    sample: CA2G_sample_0
-    variable: BCSD002
   climBCSV001:
-    collection: CA2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
-    sample: CA2G_sample_0
-    variable: BCSV001
+    collection: /dev/null
   climBCSV002:
-    collection: CA2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
-    sample: CA2G_sample_0
-    variable: BCSV002
+    collection: /dev/null
   climBCWT001:
-    collection: CA2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
-    sample: CA2G_sample_0
-    variable: BCWT001
+    collection: /dev/null
   climBCWT002:
-    collection: CA2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
-    sample: CA2G_sample_0
-    variable: BCWT002
+    collection: /dev/null
   climBCphilic:
     collection: CA2G_merra2.aer_Nv.2003-2015.2008%m2clm.nc4
     sample: CA2G_sample_0
@@ -225,38 +211,42 @@ Exports:
     collection: CA2G_merra2.aer_Nv.2003-2015.2008%m2clm.nc4
     sample: CA2G_sample_0
     variable: BCPHOBIC
+  climBRDP001:
+    collection: /dev/null
+  climBRDP002:
+    collection: /dev/null
+  climBRSD001:
+    collection: /dev/null
+  climBRSD002:
+    collection: /dev/null
+  climBRSV001:
+    collection: /dev/null
+  climBRSV002:
+    collection: /dev/null
+  climBRWT001:
+    collection: /dev/null
+  climBRWT002:
+    collection: /dev/null
+  climBRphilic:
+    collection: /dev/null
+  climBRphobic:
+    collection: /dev/null
   climOCDP001:
-    collection: CA2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
-    sample: CA2G_sample_0
-    variable: OCDP001
+    collection: /dev/null
   climOCDP002:
-    collection: CA2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
-    sample: CA2G_sample_0
-    variable: OCDP002
+    collection: /dev/null
   climOCSD001:
     collection: /dev/null
-    sample: CA2G_sample_0
-    variable: OCSD001
   climOCSD002:
     collection: /dev/null
-    sample: CA2G_sample_0
-    variable: OCSD002
   climOCSV001:
-    collection: CA2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
-    sample: CA2G_sample_0
-    variable: OCSV001
+    collection: /dev/null
   climOCSV002:
-    collection: CA2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
-    sample: CA2G_sample_0
-    variable: OCSV002
+    collection: /dev/null
   climOCWT001:
-    collection: CA2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
-    sample: CA2G_sample_0
-    variable: OCWT001
+    collection: /dev/null
   climOCWT002:
-    collection: CA2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4
-    sample: CA2G_sample_0
-    variable: OCWT002
+    collection: /dev/null
   climOCphilic:
     collection: CA2G_merra2.aer_Nv.2003-2015.2008%m2clm.nc4
     sample: CA2G_sample_0
@@ -265,46 +255,6 @@ Exports:
     collection: CA2G_merra2.aer_Nv.2003-2015.2008%m2clm.nc4
     sample: CA2G_sample_0
     variable: OCPHOBIC
-  climBRDP001:
-    collection: /dev/null
-    sample: CA2G_sample_0
-    variable: BRDP001
-  climBRDP002:
-    collection: /dev/null
-    sample: CA2G_sample_0
-    variable: BRDP002
-  climBRSD001:
-    collection: /dev/null
-    sample: CA2G_sample_0
-    variable: BRSD001
-  climBRSD002:
-    collection: /dev/null
-    sample: CA2G_sample_0
-    variable: BRSD002
-  climBRSV001:
-    collection: /dev/null
-    sample: CA2G_sample_0
-    variable: BRSV001
-  climBRSV002:
-    collection: /dev/null
-    sample: CA2G_sample_0
-    variable: BRSV002
-  climBRWT001:
-    collection: /dev/null
-    sample: CA2G_sample_0
-    variable: BRWT001
-  climBRWT002:
-    collection: /dev/null
-    sample: CA2G_sample_0
-    variable: BRWT002
-  climBRphilic:
-    collection: /dev/null
-    sample: CA2G_sample_0
-    variable: BRPHILIC
-  climBRphobic:
-    collection: /dev/null
-    sample: CA2G_sample_0
-    variable: BRPHOBIC
   pSOA_ANTHRO_VOC:
     collection: /dev/null
     regrid: CONSERVE
