--- a/ESMF/GOCART2G_GridComp/NI2G_GridComp/NI2G_GridComp_ExtData.yaml
+++ b/ESMF/GOCART2G_GridComp/NI2G_GridComp/NI2G_GridComp_ExtData.yaml
@@ -7,6 +7,7 @@ Collections:
     template: /discover/nobackup/projects/gmao/gmao_ops/pub/fp/das/Y%y4/M%m2/D%d2/GEOS.fp.asm.inst3_3d_aer_Nv.%y4%m2%d2_%h2%n2.V01.nc4
   NI2G_MERRA2_GMI.tavg24_3d_dac_Nv.x576_y361_t12.%y4.nc4:
     template: ExtData/chemistry/MERRA2GMI/v0.0.0/L72/MERRA2_GMI.tavg24_3d_dac_Nv.x576_y361_t12.%y4.nc4
+    valid_range: "1979-01-15T12:00/2019-12-15T12:00"
   NI2G_qfed2.emis_nh3.006.%y4%m2%d2.nc4:
     template: ExtData/chemistry/QFED/v2.5r1-nrt/sfc/0.1/Y%y4/M%m2/qfed2.emis_nh3.006.%y4%m2%d2.nc4
     valid_range: "2014-12-01T12:00/2021-11-01T12:00"
@@ -28,6 +29,12 @@ Samplings:
     update_reference_time: '0'
   NI2G_sample_3:
     extrapolation: persist_closest
+  NI2G_sample_4:
+    extrapolation: clim
+    update_frequency: PT24H
+    update_offset: PT12H
+    update_reference_time: '0'
+    source_time: "2019-01-15T12:00:00/2019-12-17T00:00:00"
 
 Exports:
   EMI_NH3_AG:
@@ -59,12 +66,8 @@ Exports:
     sample: NI2G_sample_2
     variable: nh3_emis
   NITRATE_HNO3:
-    collection: NI2G_MERRA2_GMI.tavg24_3d_dac_Nv.x576_y361_t12.%y4.nc4
-    linear_transformation:
-      - 0.0
-      - 0.2
-    sample: NI2G_sample_1
-    variable: hno3
+    - {starting: "1979-01-15T12:00:00", collection: NI2G_MERRA2_GMI.tavg24_3d_dac_Nv.x576_y361_t12.%y4.nc4, linear_transformation: [0.0, 0.2], regrid: CONSERVE, sample: NI2G_sample_1, variable: hno3} 
+    - {starting: "2019-12-15T12:00:00", collection: NI2G_MERRA2_GMI.tavg24_3d_dac_Nv.x576_y361_t12.%y4.nc4, linear_transformation: [0.0, 0.2], regrid: CONSERVE, sample: NI2G_sample_4, variable: hno3} 
   NI_regionMask:
     collection: NI2G_ARCTAS.region_mask.x540_y361.2008.nc
     regrid: VOTE
