--- a/ESMF/GOCART2G_GridComp/SU2G_GridComp/SU2G_GridComp_ExtData.yaml
+++ b/ESMF/GOCART2G_GridComp/SU2G_GridComp/SU2G_GridComp_ExtData.yaml
@@ -3,8 +3,10 @@ Collections:
     template: ExtData/chemistry/Lana/v2011/DMSclim_sfcconcentration.x360_y181_t12.Lana2011.nc4
   SU2G_MERRA2_GMI.tavg24_3d_dac_Nv.x576_y361_t12.%y4.nc4:
     template: ExtData/chemistry/MERRA2GMI/v0.0.0/L72/MERRA2_GMI.tavg24_3d_dac_Nv.x576_y361_t12.%y4.nc4
+    valid_range: "1979-01-15T12:00/2019-12-15T12:00"
   SU2G_SO2-em-AIR-anthro_input4MIPs_emissions_CMIP_CEDS-2021-04-21_gn__aviation.x576_y361_z72_t12.%y4.nc4:
     template: ExtData/chemistry/CEDS/v2021-04-21/L72/SO2-em-AIR-anthro_input4MIPs_emissions_CMIP_CEDS-2021-04-21_gn__aviation.x576_y361_z72_t12.%y4.nc4
+    valid_range: "1979-01-15T12:00/2019-12-15T12:00"
   SU2G_merra2.aer_Nv.2003-2015.2008%m2clm.nc4:
     template: ExtData/chemistry/MERRA2/v0.0.0/L72/merra2.aer_Nv.2003-2015.2008%m2clm.nc4
   SU2G_merra2.aer_Nx.2003-2015.2008%m2clm.nc4:
@@ -28,13 +30,17 @@ Samplings:
     update_frequency: PT24H
     update_offset: PT12H
     update_reference_time: '0'
+  SU2G_sample_3:
+    extrapolation: clim
+    update_frequency: PT24H
+    update_offset: PT12H
+    update_reference_time: '0'
+    source_time: "2019-01-15T12:00/2019-12-15T12:00"
 
 Exports:
   SU_AIRCRAFT:
-    collection: SU2G_SO2-em-AIR-anthro_input4MIPs_emissions_CMIP_CEDS-2021-04-21_gn__aviation.x576_y361_z72_t12.%y4.nc4
-    regrid: CONSERVE
-    sample: SU2G_sample_1
-    variable: so2_aviation
+    - {starting: "1979-01-15T12:00", collection: SU2G_SO2-em-AIR-anthro_input4MIPs_emissions_CMIP_CEDS-2021-04-21_gn__aviation.x576_y361_z72_t12.%y4.nc4, regrid: CONSERVE, sample: SU2G_sample_1, variable: so2_aviation}
+    - {starting: "2019-12-15T12:00", collection: SU2G_SO2-em-AIR-anthro_input4MIPs_emissions_CMIP_CEDS-2021-04-21_gn__aviation.x576_y361_z72_t12.%y4.nc4, regrid: CONSERVE, sample: SU2G_sample_3, variable: so2_aviation} 
   SU_AVIATION_CDS:
     collection: /dev/null
     regrid: CONSERVE
@@ -59,20 +65,14 @@ Exports:
     sample: SU2G_sample_2
     variable: conc
   SU_H2O2:
-    collection: SU2G_MERRA2_GMI.tavg24_3d_dac_Nv.x576_y361_t12.%y4.nc4
-    regrid: CONSERVE
-    sample: SU2G_sample_1
-    variable: h2o2
+    - {starting: "1979-01-15T12:00", collection: SU2G_MERRA2_GMI.tavg24_3d_dac_Nv.x576_y361_t12.%y4.nc4, sample: SU2G_sample_1, regrid: CONSERVE, variable: h2o2}
+    - {starting: "2019-12-15T12:00", collection: SU2G_MERRA2_GMI.tavg24_3d_dac_Nv.x576_y361_t12.%y4.nc4, regrid: CONSERVE, sample: SU2G_sample_3, variable: h2o2}
   SU_NO3:
-    collection: SU2G_MERRA2_GMI.tavg24_3d_dac_Nv.x576_y361_t12.%y4.nc4
-    regrid: CONSERVE
-    sample: SU2G_sample_1
-    variable: no3
+    - {starting: "1979-01-15T12:00", collection: SU2G_MERRA2_GMI.tavg24_3d_dac_Nv.x576_y361_t12.%y4.nc4, sample: SU2G_sample_1, regrid: CONSERVE, variable: no3}
+    - {starting: "2019-12-15T12:00", collection: SU2G_MERRA2_GMI.tavg24_3d_dac_Nv.x576_y361_t12.%y4.nc4, sample: SU2G_sample_3, regrid: CONSERVE, variable: no3}
   SU_OH:
-    collection: SU2G_MERRA2_GMI.tavg24_3d_dac_Nv.x576_y361_t12.%y4.nc4
-    regrid: CONSERVE
-    sample: SU2G_sample_1
-    variable: oh
+    - {starting: "1979-01-15T12:00", collection: SU2G_MERRA2_GMI.tavg24_3d_dac_Nv.x576_y361_t12.%y4.nc4, sample: SU2G_sample_1, regrid: CONSERVE, variable: oh}
+    - {starting: "2019-12-15T12:00", collection: SU2G_MERRA2_GMI.tavg24_3d_dac_Nv.x576_y361_t12.%y4.nc4, sample: SU2G_sample_3, regrid: CONSERVE, variable: oh}
   climSO4:
     collection: SU2G_merra2.aer_Nv.2003-2015.2008%m2clm.nc4
     sample: SU2G_sample_0
