--- a/ESMF/GOCART_GridComp/CO2_GridComp/CO2_Registry.rc
+++ b/ESMF/GOCART_GridComp/CO2_GridComp/CO2_Registry.rc
@@ -22,84 +22,84 @@
 <CO2::ExportSpec cols="SHORT UNITS DIMS VLOC STAT REFRESH AVG SUBTILES LONG">
 # Dim: xy = 2D, xyz = 3D; V: C = cell center, E = edge
 # IT: ???; R: ???; A: ???; Sub: ???
-#------------+-------------+-----+---+----+---+---+-----+-------------------------------------------
-# Export     | Units       | Dim | V | IT | R | A | Sub | Long name
-#------------+-------------+-----+---+----+---+---+-----+-------------------------------------------
-  CO2BIN001  | mol mol-1   | xyz | C |    |   |   |     | Carbon Dioxide Bin 001
-  CO2BIN002  | mol mol-1   | xyz | C |    |   |   |     | Carbon Dioxide Bin 002
-  CO2BIN003  | mol mol-1   | xyz | C |    |   |   |     | Carbon Dioxide Bin 003
-  CO2BIN004  | mol mol-1   | xyz | C |    |   |   |     | Carbon Dioxide Bin 004
-  CO2BIN005  | mol mol-1   | xyz | C |    |   |   |     | Carbon Dioxide Bin 005
-  CO2BIN006  | mol mol-1   | xyz | C |    |   |   |     | Carbon Dioxide Bin 006
-  CO2BIN007  | mol mol-1   | xyz | C |    |   |   |     | Carbon Dioxide Bin 007
-  CO2BIN008  | mol mol-1   | xyz | C |    |   |   |     | Carbon Dioxide Bin 008
-  CO2BIN009  | mol mol-1   | xyz | C |    |   |   |     | Carbon Dioxide Bin 009
-  CO2BIN010  | mol mol-1   | xyz | C |    |   |   |     | Carbon Dioxide Bin 010
-#------------+-------------+-----+---+----+---+---+-----+-------------------------------------------
-  CO2EM001   | kg m-2 s-1  | xy  |   |    |   |   |     | CO2 Emission Bin 001
-  CO2EM002   | kg m-2 s-1  | xy  |   |    |   |   |     | CO2 Emission Bin 002
-  CO2EM003   | kg m-2 s-1  | xy  |   |    |   |   |     | CO2 Emission Bin 003
-  CO2EM004   | kg m-2 s-1  | xy  |   |    |   |   |     | CO2 Emission Bin 004
-  CO2EM005   | kg m-2 s-1  | xy  |   |    |   |   |     | CO2 Emission Bin 005
-  CO2EM006   | kg m-2 s-1  | xy  |   |    |   |   |     | CO2 Emission Bin 006
-  CO2EM007   | kg m-2 s-1  | xy  |   |    |   |   |     | CO2 Emission Bin 007
-  CO2EM008   | kg m-2 s-1  | xy  |   |    |   |   |     | CO2 Emission Bin 008
-  CO2EM009   | kg m-2 s-1  | xy  |   |    |   |   |     | CO2 Emission Bin 009
-  CO2EM010   | kg m-2 s-1  | xy  |   |    |   |   |     | CO2 Emission Bin 010
-#------------+-------------+-----+---+----+---+---+-----+-------------------------------------------
-  CO2SC001   | ppmv        | xy  |   |    |   |   |     | CO2 Surface Concentration Bin 001
-  CO2SC002   | ppmv        | xy  |   |    |   |   |     | CO2 Surface Concentration Bin 002
-  CO2SC003   | ppmv        | xy  |   |    |   |   |     | CO2 Surface Concentration Bin 003
-  CO2SC004   | ppmv        | xy  |   |    |   |   |     | CO2 Surface Concentration Bin 004
-  CO2SC005   | ppmv        | xy  |   |    |   |   |     | CO2 Surface Concentration Bin 005
-  CO2SC006   | ppmv        | xy  |   |    |   |   |     | CO2 Surface Concentration Bin 006
-  CO2SC007   | ppmv        | xy  |   |    |   |   |     | CO2 Surface Concentration Bin 007
-  CO2SC008   | ppmv        | xy  |   |    |   |   |     | CO2 Surface Concentration Bin 008
-  CO2SC009   | ppmv        | xy  |   |    |   |   |     | CO2 Surface Concentration Bin 009
-  CO2SC010   | ppmv        | xy  |   |    |   |   |     | CO2 Surface Concentration Bin 010
-#------------+-------------+-----+---+----+---+---+-----+-------------------------------------------
-  CO2CL001   | kg m-2      | xy  |   |    |   |   |     | CO2 Column Burden Bin 001
-  CO2CL002   | kg m-2      | xy  |   |    |   |   |     | CO2 Column Burden Bin 002
-  CO2CL003   | kg m-2      | xy  |   |    |   |   |     | CO2 Column Burden Bin 003
-  CO2CL004   | kg m-2      | xy  |   |    |   |   |     | CO2 Column Burden Bin 004
-  CO2CL005   | kg m-2      | xy  |   |    |   |   |     | CO2 Column Burden Bin 005
-  CO2CL006   | kg m-2      | xy  |   |    |   |   |     | CO2 Column Burden Bin 006
-  CO2CL007   | kg m-2      | xy  |   |    |   |   |     | CO2 Column Burden Bin 007
-  CO2CL008   | kg m-2      | xy  |   |    |   |   |     | CO2 Column Burden Bin 008
-  CO2CL009   | kg m-2      | xy  |   |    |   |   |     | CO2 Column Burden Bin 009
-  CO2CL010   | kg m-2      | xy  |   |    |   |   |     | CO2 Column Burden Bin 010
-#------------+-------------+-----+---+----+---+---+-----+-------------------------------------------
-  CO2DRY001  | mol mol-1   | xyz | C |    |   |   |     | CO2 Dry-Air Mole Fraction Bin 001
-  CO2DRY002  | mol mol-1   | xyz | C |    |   |   |     | CO2 Dry-Air Mole Fraction Bin 002
-  CO2DRY003  | mol mol-1   | xyz | C |    |   |   |     | CO2 Dry-Air Mole Fraction Bin 003
-  CO2DRY004  | mol mol-1   | xyz | C |    |   |   |     | CO2 Dry-Air Mole Fraction Bin 004
-  CO2DRY005  | mol mol-1   | xyz | C |    |   |   |     | CO2 Dry-Air Mole Fraction Bin 005
-  CO2DRY006  | mol mol-1   | xyz | C |    |   |   |     | CO2 Dry-Air Mole Fraction Bin 006
-  CO2DRY007  | mol mol-1   | xyz | C |    |   |   |     | CO2 Dry-Air Mole Fraction Bin 007
-  CO2DRY008  | mol mol-1   | xyz | C |    |   |   |     | CO2 Dry-Air Mole Fraction Bin 008
-  CO2DRY009  | mol mol-1   | xyz | C |    |   |   |     | CO2 Dry-Air Mole Fraction Bin 009
-  CO2DRY010  | mol mol-1   | xyz | C |    |   |   |     | CO2 Dry-Air Mole Fraction Bin 010
-#------------+-------------+-----+---+----+---+---+-----+-------------------------------------------
-  CO2SD001   | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Surface Concentration Bin 001
-  CO2SD002   | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Surface Concentration Bin 002
-  CO2SD003   | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Surface Concentration Bin 003
-  CO2SD004   | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Surface Concentration Bin 004
-  CO2SD005   | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Surface Concentration Bin 005
-  CO2SD006   | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Surface Concentration Bin 006
-  CO2SD007   | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Surface Concentration Bin 007
-  CO2SD008   | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Surface Concentration Bin 008
-  CO2SD009   | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Surface Concentration Bin 009
-  CO2SD010   | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Surface Concentration Bin 010
-#------------+-------------+-----+---+----+---+---+-----+-------------------------------------------
-  CO2CD001   | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Column Average Bin 001
-  CO2CD002   | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Column Average Bin 002
-  CO2CD003   | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Column Average Bin 003
-  CO2CD004   | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Column Average Bin 004
-  CO2CD005   | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Column Average Bin 005
-  CO2CD006   | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Column Average Bin 006
-  CO2CD007   | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Column Average Bin 007
-  CO2CD008   | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Column Average Bin 008
-  CO2CD009   | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Column Average Bin 009
-  CO2CD010   | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Column Average Bin 010
-#------------+-------------+-----+---+----+---+---+-----+-------------------------------------------
+#--------------+-------------+-----+---+----+---+---+-----+-------------------------------------------
+# Export       | Units       | Dim | V | IT | R | A | Sub | Long name
+#--------------+-------------+-----+---+----+---+---+-----+-------------------------------------------
+  CO2BIN001    | mol mol-1   | xyz | C |    |   |   |     | Carbon Dioxide Bin 001
+  CO2BIN002    | mol mol-1   | xyz | C |    |   |   |     | Carbon Dioxide Bin 002
+  CO2BIN003    | mol mol-1   | xyz | C |    |   |   |     | Carbon Dioxide Bin 003
+  CO2BIN004    | mol mol-1   | xyz | C |    |   |   |     | Carbon Dioxide Bin 004
+  CO2BIN005    | mol mol-1   | xyz | C |    |   |   |     | Carbon Dioxide Bin 005
+  CO2BIN006    | mol mol-1   | xyz | C |    |   |   |     | Carbon Dioxide Bin 006
+  CO2BIN007    | mol mol-1   | xyz | C |    |   |   |     | Carbon Dioxide Bin 007
+  CO2BIN008    | mol mol-1   | xyz | C |    |   |   |     | Carbon Dioxide Bin 008
+  CO2BIN009    | mol mol-1   | xyz | C |    |   |   |     | Carbon Dioxide Bin 009
+  CO2BIN010    | mol mol-1   | xyz | C |    |   |   |     | Carbon Dioxide Bin 010
+#--------------+-------------+-----+---+----+---+---+-----+-------------------------------------------
+  CO2EM001     | kg m-2 s-1  | xy  |   |    |   |   |     | CO2 Emission Bin 001
+  CO2EM002     | kg m-2 s-1  | xy  |   |    |   |   |     | CO2 Emission Bin 002
+  CO2EM003     | kg m-2 s-1  | xy  |   |    |   |   |     | CO2 Emission Bin 003
+  CO2EM004     | kg m-2 s-1  | xy  |   |    |   |   |     | CO2 Emission Bin 004
+  CO2EM005     | kg m-2 s-1  | xy  |   |    |   |   |     | CO2 Emission Bin 005
+  CO2EM006     | kg m-2 s-1  | xy  |   |    |   |   |     | CO2 Emission Bin 006
+  CO2EM007     | kg m-2 s-1  | xy  |   |    |   |   |     | CO2 Emission Bin 007
+  CO2EM008     | kg m-2 s-1  | xy  |   |    |   |   |     | CO2 Emission Bin 008
+  CO2EM009     | kg m-2 s-1  | xy  |   |    |   |   |     | CO2 Emission Bin 009
+  CO2EM010     | kg m-2 s-1  | xy  |   |    |   |   |     | CO2 Emission Bin 010
+#--------------+-------------+-----+---+----+---+---+-----+-------------------------------------------
+  CO2SC001     | ppmv        | xy  |   |    |   |   |     | CO2 Surface Concentration Bin 001
+  CO2SC002     | ppmv        | xy  |   |    |   |   |     | CO2 Surface Concentration Bin 002
+  CO2SC003     | ppmv        | xy  |   |    |   |   |     | CO2 Surface Concentration Bin 003
+  CO2SC004     | ppmv        | xy  |   |    |   |   |     | CO2 Surface Concentration Bin 004
+  CO2SC005     | ppmv        | xy  |   |    |   |   |     | CO2 Surface Concentration Bin 005
+  CO2SC006     | ppmv        | xy  |   |    |   |   |     | CO2 Surface Concentration Bin 006
+  CO2SC007     | ppmv        | xy  |   |    |   |   |     | CO2 Surface Concentration Bin 007
+  CO2SC008     | ppmv        | xy  |   |    |   |   |     | CO2 Surface Concentration Bin 008
+  CO2SC009     | ppmv        | xy  |   |    |   |   |     | CO2 Surface Concentration Bin 009
+  CO2SC010     | ppmv        | xy  |   |    |   |   |     | CO2 Surface Concentration Bin 010
+#--------------+-------------+-----+---+----+---+---+-----+-------------------------------------------
+  CO2CL001     | kg m-2      | xy  |   |    |   |   |     | CO2 Column Burden Bin 001
+  CO2CL002     | kg m-2      | xy  |   |    |   |   |     | CO2 Column Burden Bin 002
+  CO2CL003     | kg m-2      | xy  |   |    |   |   |     | CO2 Column Burden Bin 003
+  CO2CL004     | kg m-2      | xy  |   |    |   |   |     | CO2 Column Burden Bin 004
+  CO2CL005     | kg m-2      | xy  |   |    |   |   |     | CO2 Column Burden Bin 005
+  CO2CL006     | kg m-2      | xy  |   |    |   |   |     | CO2 Column Burden Bin 006
+  CO2CL007     | kg m-2      | xy  |   |    |   |   |     | CO2 Column Burden Bin 007
+  CO2CL008     | kg m-2      | xy  |   |    |   |   |     | CO2 Column Burden Bin 008
+  CO2CL009     | kg m-2      | xy  |   |    |   |   |     | CO2 Column Burden Bin 009
+  CO2CL010     | kg m-2      | xy  |   |    |   |   |     | CO2 Column Burden Bin 010
+#--------------+-------------+-----+---+----+---+---+-----+-------------------------------------------
+  CO2DRY001    | mol mol-1   | xyz | C |    |   |   |     | CO2 Dry-Air Mole Fraction Bin 001
+  CO2DRY002    | mol mol-1   | xyz | C |    |   |   |     | CO2 Dry-Air Mole Fraction Bin 002
+  CO2DRY003    | mol mol-1   | xyz | C |    |   |   |     | CO2 Dry-Air Mole Fraction Bin 003
+  CO2DRY004    | mol mol-1   | xyz | C |    |   |   |     | CO2 Dry-Air Mole Fraction Bin 004
+  CO2DRY005    | mol mol-1   | xyz | C |    |   |   |     | CO2 Dry-Air Mole Fraction Bin 005
+  CO2DRY006    | mol mol-1   | xyz | C |    |   |   |     | CO2 Dry-Air Mole Fraction Bin 006
+  CO2DRY007    | mol mol-1   | xyz | C |    |   |   |     | CO2 Dry-Air Mole Fraction Bin 007
+  CO2DRY008    | mol mol-1   | xyz | C |    |   |   |     | CO2 Dry-Air Mole Fraction Bin 008
+  CO2DRY009    | mol mol-1   | xyz | C |    |   |   |     | CO2 Dry-Air Mole Fraction Bin 009
+  CO2DRY010    | mol mol-1   | xyz | C |    |   |   |     | CO2 Dry-Air Mole Fraction Bin 010
+#--------------+-------------+-----+---+----+---+---+-----+-------------------------------------------
+  CO2SCDRY001  | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Surface Concentration Bin 001
+  CO2SCDRY002  | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Surface Concentration Bin 002
+  CO2SCDRY003  | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Surface Concentration Bin 003
+  CO2SCDRY004  | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Surface Concentration Bin 004
+  CO2SCDRY005  | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Surface Concentration Bin 005
+  CO2SCDRY006  | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Surface Concentration Bin 006
+  CO2SCDRY007  | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Surface Concentration Bin 007
+  CO2SCDRY008  | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Surface Concentration Bin 008
+  CO2SCDRY009  | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Surface Concentration Bin 009
+  CO2SCDRY010  | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Surface Concentration Bin 010
+#--------------+-------------+-----+---+----+---+---+-----+-------------------------------------------
+  CO2CLDRY001  | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Column Average Bin 001
+  CO2CLDRY002  | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Column Average Bin 002
+  CO2CLDRY003  | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Column Average Bin 003
+  CO2CLDRY004  | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Column Average Bin 004
+  CO2CLDRY005  | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Column Average Bin 005
+  CO2CLDRY006  | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Column Average Bin 006
+  CO2CLDRY007  | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Column Average Bin 007
+  CO2CLDRY008  | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Column Average Bin 008
+  CO2CLDRY009  | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Column Average Bin 009
+  CO2CLDRY010  | mol mol-1   | xy  |   |    |   |   |     | CO2 Dry-Air Column Average Bin 010
+#--------------+-------------+-----+---+----+---+---+-----+-------------------------------------------
 </CO2::ExportSpec>
