--- a/ESMF/GOCART2G_GridComp/NI2G_GridComp/NI2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/NI2G_GridComp/NI2G_StateSpecs.rc
@@ -49,18 +49,19 @@ category: EXPORT
   NH3MASS       | kg/kg        | xyz   | C     |                                | Ammonia Mass Mixing Ratio
   NH4MASS       | kg/kg        | xyz   | C     |                                | Ammonium Aerosol Mass Mixing Ratio
   NIMASS        | kg/kg        | xyz   | C     |                                | Nitrate Mass Mixing Ratio
-  NIMASS25      | kg/kg        | xyz   | C     |                                | Nitrate Mass Mixing Ratio [PM2.5]
+  NIMASS25      | kg/kg        | xyz   | C     |                                | Nitrate Mass Mixing Ratio for Particulate Matter < 2.5 microns (PM2.5)
   HNO3CONC      | kg m-3       | xyz   | C     |                                | Nitric Acid Mass Concentration
   NH3CONC       | kg m-3       | xyz   | C     |                                | Ammonia Mass Concentration
   NH4CONC       | kg m-3       | xyz   | C     |                                | Ammonium Mass Concentration
   NICONC        | kg m-3       | xyz   | C     |                                | Nitrate Mass Concentration
-  NICONC25      | kg m-3       | xyz   | C     |                                | Nitrate Mass Concentration [PM2.5]
+  NICONC25      | kg m-3       | xyz   | C     |                                | Nitrate Mass Concentration for Particulate Matter < 2.5 microns (PM2.5)
   NIEXTCOEF     | m-1          | xyz   | C     | size(self%wavelengths_profile) | Nitrate Extinction Coefficient
   NIEXTCOEFRH20 | m-1          | xyz   | C     | size(self%wavelengths_profile) | Nitrate Extinction Coefficient - fixed RH=20%
   NIEXTCOEFRH80 | m-1          | xyz   | C     | size(self%wavelengths_profile) | Nitrate Extinction Coefficient - fixed RH=80%
   NISCACOEF     | m-1          | xyz   | C     | size(self%wavelengths_profile) | Nitrate Scattering Coefficient
   NISCACOEFRH20 | m-1          | xyz   | C     | size(self%wavelengths_profile) | Nitrate Scattering Coefficient - fixed RH=20%
   NISCACOEFRH80 | m-1          | xyz   | C     | size(self%wavelengths_profile) | Nitrate Scattering Coefficient - fixed RH=80%
+  NIBCKCOEF     | m-1 sr-1     | xyz   | C     | size(self%wavelengths_profile) | Nitrate Backscatter Coefficient
 # ............. | ............ | ..... | ..... | ...........                    | ..................................
   NIPNO3AQ      | kg m-2 s-1   | xy    | N     |                                | Nitrate Production from Aqueous Chemistry
   NIPNH4AQ      | kg m-2 s-1   | xy    | N     |                                | Ammonium Production from Aqueous Chemistry
@@ -88,30 +89,30 @@ category: EXPORT
   NH4CMASS      | kg m-3       | xy    | N     |                                | Ammonium Column Mass Density
   NICMASS       | kg m-2       | xy    | N     |                                | Nitrate Column Mass Density
   NICMASS25     | kg m-2       | xy    | N     |                                | Nitrate Column Mass Density [PM2.5]
-  NIEXTTFM      | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Extinction AOT - PM 1.0 um
-  NISCATFM      | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Scattering AOT - PM 1.0 um
-  NIEXTT25      | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Extinction AOT - PM 2.5 um
-  NISCAT25      | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Scattering AOT - PM 2.5 um
-  NIEXTTAU      | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Extinction AOT
-  NISTEXTTAU    | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Extinction AOT Stratosphere
-  NISCATAU      | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Scattering AOT
-  NISTSCATAU    | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Scattering AOT Stratosphere
+  NIEXTTFM      | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Aerosol Optical Depth Due to Particulate Matter < 1 micron (PM1.0)
+  NISCATFM      | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Scattering Aerosol Optical Depth Due to Particulate Matter < 1 micron (PM1.0)
+  NIEXTT25      | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Aerosol Optical Depth Due to Particulate Matter < 2.5 microns (PM2.5)
+  NISCAT25      | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Scattering Aerosol Optical Depth Due to Particulate Matter < 2.5 microns (PM2.5)
+  NIEXTTAU      | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Aerosol Optical Depth
+  NISTEXTTAU    | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Stratospheric Aerosol Optical Thickness
+  NISCATAU      | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Aerosol Optical Depth Due to Scattering
+  NISTSCATAU    | 1            | xy    | N     | size(self%wavelengths_vertint) | Nitrate Stratospheric Aerosol Optical Thickness Due to Scattering
   NIANGSTR      | 1            | xy    | N     |                                | Nitrate Angstrom parameter [470-870 nm]
   NIFLUXU       | kg m-1 s-1   | xy    | N     |                                | Nitrate column u-wind mass flux
   NIFLUXV       | kg m-1 s-1   | xy    | N     |                                | Nitrate column v-wind mass flux
 
 category: INTERNAL
-#---------------------------------------------------------------------------------------------------------------
-#  VARIABLE       | DIMENSION   |          Additional Metadata
-#---------------------------------------------------------------------------------------------------------------
-  NAME  | UNITS   | DIMS | VLOC | RESTART              | ADD2EXPORT | FRIENDLYTO                | LONG NAME
-#---------------------------------------------------------------------------------------------------------------
- NH3    | kg kg-1 | xyz  | C    | MAPL_RestartOptional | T          | DYNAMICS:TURBULENCE:MOIST | Ammonia (NH3, gas phase)
- NH4a   | kg kg-1 | xyz  | C    | MAPL_RestartOptional | T          | DYNAMICS:TURBULENCE:MOIST | Ammonium ion (NH4+, aerosol phase)
- NO3an1 | kg kg-1 | xyz  | C    | MAPL_RestartOptional | T          | DYNAMICS:TURBULENCE:MOIST | Nitrate size bin 001
- NO3an2 | kg kg-1 | xyz  | C    | MAPL_RestartOptional | T          | DYNAMICS:TURBULENCE:MOIST | Nitrate size bin 002
- NO3an3 | kg kg-1 | xyz  | C    | MAPL_RestartOptional | T          | DYNAMICS:TURBULENCE:MOIST | Nitrate size bin 003
-
+#----------------------------------------------------------------------------------------
+#  VARIABLE                | DIMENSION        |          Additional Metadata
+#----------------------------------------------------------------------------------------
+  NAME  | UNITS | DIMS | VLOC | RESTART         | ADD2EXPORT | FRIENDLYTO | LONG NAME
+#----------------------------------------------------------------------------------------
+ NH3    |kg kg-1   | xyz  | C    | MAPL_RestartOptional | T | DYNAMICS:TURBULENCE:MOIST | Ammonia (NH3, gas phase)
+ NH4a   |kg kg-1   | xyz  | C    | MAPL_RestartOptional | T | DYNAMICS:TURBULENCE:MOIST | Ammonium ion (NH4+, aerosol phase)
+ NO3an1 |kg kg-1   | xyz  | C    | MAPL_RestartOptional | T | DYNAMICS:TURBULENCE:MOIST | Nitrate size bin 001
+ NO3an2 |kg kg-1   | xyz  | C    | MAPL_RestartOptional | T | DYNAMICS:TURBULENCE:MOIST | Nitrate size bin 002
+ NO3an3 |kg kg-1   | xyz  | C    | MAPL_RestartOptional | T | DYNAMICS:TURBULENCE:MOIST | Nitrate size bin 003
+ XHNO3  |kg m-2 s-1| xyz  | C    |                      | F |                           | buffer for NITRATE_HNO3
 
 #********************************************************
 #
