fixes to make code compile

--- a/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_StateSpecs.rc
@@ -82,8 +82,8 @@ category: INTERNAL
   NAME | UNITS   | DIMS | VLOC | UNGRIDDED  | RESTART              | ADD2EXPORT | FRIENDLYTO                | LONG NAME
 #--------------------------------------------------------------------------------------------------------------------------
  SS    | kg kg-1 | xyz  | C    | self%nbins | MAPL_RestartOptional | T          | DYNAMICS:TURBULENCE:MOIST:GEOSCHEMCHEM | Sea Salt Mixing Ratio (bin %d)
- SDTMP | kg m-2 s-1 | xy  |     | self%nbins | MAPL_RestartOptional | T | | sdtmp
- WDTMP | kg m-2 s-1 | xy  |     | self%nbins | MAPL_RestartOptional | T | | wdtmp
+ SDTMP | kg m-2 s-1 | xy  | N   | self%nbins | MAPL_RestartOptional | T | | sdtmp
+ WDTMP | kg m-2 s-1 | xy  | N   | self%nbins | MAPL_RestartOptional | T | | wdtmp
 
 #********************************************************
 #
